<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false"
            tools:context=".activities.FormActivity"
            >

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:fitsSystemWindows="true"
                android:layout_height="@dimen/app_bar_height"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/transparent"
                app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:fitsSystemWindows="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:toolbarId="@+id/toolbar"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                    app:contentScrim="?attr/colorOnToolbar"
                    app:statusBarScrim="@color/transparent"
                    app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                    android:background="@color/transparent"
                    app:expandedTitleMarginStart="23dp"
                    app:expandedTitleMargin="0dp"
                    app:expandedTitleMarginBottom="20dp"
                    app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded.Invisible">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/editName"
                        android:layout_weight="0"
                        android:layout_marginStart="23dp"
                        android:layout_marginEnd="23dp"
                        app:layout_collapseMode="parallax"
                        android:layout_gravity="bottom"
                        android:fontFamily="@font/montserrat"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:hint="@string/title"
                        android:background="@android:color/transparent"
                        android:layout_marginBottom="10dp" />

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_height="?attr/actionBarSize"
                        android:layout_width="match_parent"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/Theme.pillBox.PopupOverlay"
                        app:titleMargin="4dp"
                        app:titleMarginStart="0dp"
                        app:contentInsetStartWithNavigation="0dp"
                        />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:fillViewport="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_marginTop="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:hint="@string/current_stock"
                        android:layout_marginBottom="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editStock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:inputType="number|none" />

                </com.google.android.material.textfield.TextInputLayout>

<!--                <TextView-->
<!--                        android:text="Current Stock"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginLeft="23dp"-->
<!--                        android:layout_marginRight="23dp"-->
<!--                        android:layout_weight="0"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginBottom="5dp"-->
<!--                        android:id="@+id/textView"-->
<!--                        android:fontFamily="sans-serif-medium" />-->

<!--                <EditText-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:ems="10"-->
<!--                        android:id="@+id/editStock"-->
<!--                        android:layout_weight="0"-->
<!--                        android:inputType="number|none"-->
<!--                        android:layout_marginStart="20dp"-->
<!--                        android:layout_marginEnd="20dp"-->
<!--                        android:hint="0"-->
<!--                        android:fontFamily="sans-serif" />-->

                <TextView
                        android:text="Color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_weight="0"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-medium" />

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:id="@+id/rvColors"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:overScrollMode="never"
                        tools:visibility="gone" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                        android:text="@string/show_in_widget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/widgetSwitch"
                        android:layout_weight="0"
                        app:useMaterialThemeColors="true"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="20dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                        android:text="@string/auto_decrement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="23dp"
                        android:layout_marginEnd="20dp"
                        android:id="@+id/autoDecSwitch"
                        android:layout_weight="0"
                        app:useMaterialThemeColors="true"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="20dp" />

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0"
                        android:id="@+id/autoDecLinearLayout"
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                    <TextView
                            android:text="Take"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="viewEnd" />

                    <NumberPicker
                            android:id="@+id/autoDecPerDayPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:minValue="@{1}"
                            app:maxValue="@{24}"
                            app:value="@{1}"
                            android:layout_weight="0" />

                    <TextView
                            android:text="every"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0" />

                    <NumberPicker
                            android:id="@+id/autoDecNDaysPicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:minValue="@{1}"
                            app:maxValue="@{28}"
                            app:value="@{1}"
                            android:layout_weight="0" />

                    <TextView
                            android:text="@string/days"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/daysTV"
                            android:textAlignment="viewStart" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:isScrollContainer="false">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:id="@+id/HorizontalDivider" />

            <Button
                    android:text="Delete Item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteButton"
                    android:layout_weight="0"
                    android:onClick="deleteButton"
                    android:stateListAnimator="@null"
                    android:elevation="0dp"
                    android:textColor="@color/primaryColor"
                    android:background="@color/transparent" />

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>