<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:backgroundTintMode="add"
        android:animateLayoutChanges="true"
        android:id="@+id/coordinatorLayout"
        android:clipChildren="true">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="true"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/transparent"
            app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="My Pills"
                app:statusBarScrim="@color/transparent"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded.WithSize"
                app:expandedTitleGravity="center_vertical"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                android:background="@color/transparent"
                app:expandedTitleMarginStart="16dp"
                app:expandedTitleMargin="0dp"
                app:expandedTitleMarginTop="100dp"
                app:contentScrim="?attr/colorOnToolbar">


            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.pillBox.PopupOverlay"
                    app:titleMargin="4dp">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:overScrollMode="never"
            android:animateLayoutChanges="true"
            android:visibility="visible"
            tools:layout_editor_absoluteY="180dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:fillViewport="true">


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"
                android:paddingHorizontal="8dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:nestedScrollingEnabled="true"
                android:scrollbarSize="0dp"
                android:clipToPadding="false" />



    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/fab"
            android:onClick="fabButton"
            android:layout_marginEnd="16dp"
            android:text="Add Item"
            android:layout_gravity="bottom|end"
            app:icon="@android:drawable/ic_input_add"
            android:layout_marginBottom="16dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>