...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        style="@style/CardView.DayNight"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="6dp"
        android:id="@+id/cardView"
        app:cardMaxElevation="16dp"
        android:animateLayoutChanges="true"
        app:cardElevation="0dp"
        app:cardBackgroundColor="?attr/colorOnCard">
    <!-- app:layout_constraintDimensionRatio="1:1" -->

...
            android:layout_height="wrap_content">

        <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stockTV"
                android:layout_weight="0"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp" />
...
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp" />

        <Button
                android:layout_width="31dp"
                android:layout_height="0dp"
                android:id="@+id/colorDot"
                app:cornerRadius="8dp"
                android:insetBottom="4dp"
                android:insetTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                android:stateListAnimator="@null"
                android:visibility="visible"
...
